# physics-simulation

./: CMakeLists.txt  README.md
src/: exceptions.cpp  exceptions.hpp  main.cpp  object.cpp  object.hpp  vector.hpp
src/objects/: rectangle.cpp  rectangle.hpp
